Fix compilation error in Java 21